Fix: breadcrumb and toggle password visibility add (#25)
* Fix: breadcrumb and toggle password visibility add

* Fix: phone number login- toast message bug fix

* Fix: Login validation error

--- a/backend/frontend/src/css/updateprofilescreen.css
+++ b/backend/frontend/src/css/updateprofilescreen.css
@@ -298,3 +298,7 @@ form.otp-form {
     padding: 10px 12px;
   }
 }
+
+.update-profile-screen .header {
+  position: sticky !important;
+}
